- Geliştirme ortamında değişiklikleri aktif olarak görebilmek için gerekli olan kütüphane yüklendi.

--- a/EnUcuzUrun.csproj
+++ b/EnUcuzUrun.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.11.30" />
     <PackageReference Include="HtmlAgilityPack.CssSelectors.NetCore" Version="1.2.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.13" />
   </ItemGroup>
 
 </Project>
